--- a/app-two/frontend/index.html
+++ b/app-two/frontend/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>App One</title>
   </head>
   <body>
-    <div id="root"></div>
+    <goatfryed-mfs-app-two />
     <script type="module" src="/src/main.tsx"></script>
-    <script type="module" src="http://localhost:19911/src/main.tsx"></script>
-    <script type="module" src="http://localhost:19921/src/main.tsx"></script>
   </body>
 </html>
